2007-06-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R: Added classes for Reuters21578 XML and RCV1
	documents. This simplifies some functions, e.g., asPlain.

2007-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* inst/doc/tm.Rnw: Fixed some typos in vignette.

2007-06-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R (replaceWords): Added method to replace a set of
	words by a single word. Useful for synonyms.

2007-05-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/TermDocMatrix.Rd: Fixed documentation on Data slot.

2007-05-19  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (textvector): Small fix for dealing with empty
	vectors. Thanks to Ariel Maguyon for his error report.
	(removeSparseTerms): New function to remove columns from a
	term-document matrix exceeding a sparse factor.

2007-05-15  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/tmUpdate.Rd: Corrected documentation on readerControl parameter.

2007-05-11  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* man/sFilter.Rd: Corrected documentation on statement format (use
	'==' instead of '=').

2007-05-08  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/aobjects.R (StructuredTextDocument): Inherits from
	TextDocument.

2007-05-04  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (findFreqTerms): Perform efficient computation
	on sparse matrices as proposed by Martin Maechler.

2007-04-27  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/textdoccol.R: Removed \code{dbDisconnect} calls since last
	\pkg{filehash} version makes them deprecated.

2007-04-22  Ingo Feinerer  <h0125130@wu-wien.ac.at>

	* R/termdocmatrix.R (textvector): Stemming is now performed before
	erasing stopwords.
	(weightMatrix): Adapted to handle sparse matrices.
	(TermDocMatrix): Sparse matrix is now efficiently built by
	direct stepwise insertion of row values into it.

2007-04-21  Ingo Feinerer  <h0125130@wu-wien.ac.at>
