@@ -1,3 +1,7 @@
+2007-06-12  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/dictionary.R: Added dictionary support.
+
 2007-06-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/aobjects.R: Added classes for Reuters21578 XML and RCV1
